# test_mcp

./: LICENSE  README.md  debug.md  main.py  pyproject.toml  server.py  setup.py  test_server.py  test_tools.py
src/test_mcp/: __init__.py  main.py  server.py
