[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-calculator-mcp"
version = "0.1.0"
description = "A simple MCP server with basic calculation tools"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastmcp>=2.13.1",
]

[project.scripts]
simple-calculator-mcp = "main:main"

[project.urls]
Homepage = "https://github.com/yourusername/custom-calculator-mcp"
Repository = "https://github.com/yourusername/custom-calculator-mcp.git"
Issues = "https://github.com/yourusername/custom-calculator-mcp/issues"
