[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "test-mcp"
version = "0.1.0"
description = "A simple MCP server with basic calculator tools"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Barada", email = "barada@example.com"}
]

dependencies = ["fastmcp>=2.13.1"]

[project.scripts]
test-mcp = "test_mcp.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]